# BLADE

./: .gitignore  README.md  pyproject.toml
blade/: __init__.py  __main__.py  code_manipulation.py  codes_database.py  config.py  core.py  evaluator.py  generator.py  sandbox.py
blade/container/.ipynb_checkpoints/: container_main-checkpoint.py
examples/: 1d_online_knapsack_spec.py  online_submodular_max_card.py
model_metadata/: sample_llm_metadata2.json
